# peripheral.joystick

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README  Readme.md  appveyor.yml  configure.ac
addons/: Makefile.am  Makefile.include.am
addons/peripheral.joystick/: Makefile.am
addons/peripheral.joystick/addon/: addon.xml.in
addons/peripheral.joystick/project/VS2010Express/: peripheral.joystick.vcxproj  peripheral.joystick.vcxproj.filters
addons/peripheral.joystick/src/: addon.cpp
addons/peripheral.joystick/src/api/: Joystick.cpp  Joystick.h  JoystickInterface.cpp  JoystickInterface.h  JoystickManager.cpp  JoystickManager.h  JoystickTypes.h
addons/peripheral.joystick/src/api/directinput/: JoystickDirectInput.cpp  JoystickDirectInput.h  JoystickInterfaceDirectInput.cpp  JoystickInterfaceDirectInput.h
addons/peripheral.joystick/src/api/linux/: JoystickInterfaceLinux.cpp  JoystickInterfaceLinux.h  JoystickLinux.cpp  JoystickLinux.h
addons/peripheral.joystick/src/api/sdl/: JoystickInterfaceSDL.cpp  JoystickInterfaceSDL.h  JoystickSDL.cpp  JoystickSDL.h
addons/peripheral.joystick/src/api/xinput/: JoystickInterfaceXInput.cpp  JoystickInterfaceXInput.h  JoystickXInput.cpp  JoystickXInput.h  XInputDLL.cpp  XInputDLL.h
addons/peripheral.joystick/src/keymapper/: KeyMapper.cpp  KeyMapper.h
addons/peripheral.joystick/src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.h
addons/peripheral.joystick/src/storage/gamecontrollerdb/: DatabaseGameControllerDB.h
addons/peripheral.joystick/src/utils/: CommonMacros.h
cmake/: FindPCRE.cmake  FindSDL2.cmake  FindSdl.cmake
debian/: control  copyright  rules
depends/common/pcre/: flags.txt  pcre.txt  strtoq.patch
lib/: Makefile.am
peripheral.joystick/: addon.xml  addon.xml.in  buttonmap.xml
peripheral.joystick/resources/: buttonmap.xml  settings.xml  settings.xml.include
project/VS2010Express/: ConfigureAddonXML.bat  CopyAddons.bat  XBMC Peripheral Addons.sln
project/VS2010Express/platform/: platform.vcxproj
src/: JoystickDefinitions.h  JoystickTranslator.cpp  JoystickTranslator.h  addon.cpp  addon.h
src/api/: AnomalousTrigger.cpp  AnomalousTrigger.h  AnomalousTriggerFilter.cpp  AnomalousTriggerFilter.h  IJoystickAxisFilter.h  IJoystickInterface.cpp  IJoystickInterface.h  Joystick.cpp  Joystick.h  JoystickAsync.cpp  JoystickAsync.h  JoystickInterface.cpp  JoystickInterface.h  JoystickInterfaceCallback.cpp  JoystickInterfaceCallback.h  JoystickManager.cpp  JoystickManager.h  JoystickTranslator.cpp  JoystickTranslator.h  JoystickTypes.h  JoystickUtils.cpp  JoystickUtils.h  PeripheralScanner.cpp  PeripheralScanner.h
src/api/cocoa/: JoystickCocoa.cpp  JoystickCocoa.h  JoystickInterfaceCocoa.cpp  JoystickInterfaceCocoa.h
src/api/directinput/: JoystickDirectInput.cpp  JoystickDirectInput.h  JoystickInterfaceDirectInput.cpp  JoystickInterfaceDirectInput.h
src/api/linux/: JoystickInterfaceLinux.cpp  JoystickInterfaceLinux.h  JoystickLinux.cpp  JoystickLinux.h
src/api/sdl/: JoystickInterfaceSDL.cpp  JoystickInterfaceSDL.h  JoystickSDL.cpp  JoystickSDL.h
src/api/udev/: JoystickInterfaceUdev.cpp  JoystickInterfaceUdev.h  JoystickUdev.cpp  JoystickUdev.h
src/api/xinput/: JoystickInterfaceXInput.cpp  JoystickInterfaceXInput.h  JoystickXInput.cpp  JoystickXInput.h  XInputDLL.cpp  XInputDLL.h
src/buttonmapper/: ButtonMapTranslator.cpp  ButtonMapTranslator.h  ButtonMapTypes.h  ButtonMapUtils.cpp  ButtonMapUtils.h  ButtonMapper.cpp  ButtonMapper.h  ControllerMapper.cpp  ControllerMapper.h  ControllerModel.cpp  ControllerModel.h  ControllerTransformer.cpp  ControllerTransformer.h  DriverGeometry.cpp  DriverGeometry.h  JoystickFamily.cpp  JoystickFamily.h
src/devices/: Buttons.cpp  Buttons.h  Device.cpp  Device.h  Devices.cpp  Devices.h
src/filesystem/: DirectoryCache.cpp  DirectoryCache.h  DirectoryUtils.cpp  DirectoryUtils.h  FileUtils.cpp  FileUtils.h  Filesystem.cpp  Filesystem.h  FilesystemTypes.h  IDirectoryUtils.h  IFile.h  IFileUtils.h  ReadableFile.cpp  ReadableFile.h  SeekableFile.h
src/filesystem/generic/: ReadableFile.h  SeekableFile.cpp  SeekableFile.h
src/filesystem/vfs/: VFSDirectoryUtils.cpp  VFSDirectoryUtils.h  VFSFile.cpp  VFSFile.h  VFSFileUtils.cpp  VFSFileUtils.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h  LogSyslog.cpp  LogSyslog.h
src/settings/: Settings.cpp  Settings.h
src/storage/: ButtonMap.cpp  ButtonMap.h  ButtonMapDefinitions.h  ButtonMapTranslator.cpp  ButtonMapTranslator.h  ButtonMapTypes.h  Database.cpp  Database.h  Device.cpp  Device.h  DeviceConfiguration.cpp  DeviceConfiguration.h  DriverDatabase.cpp  DriverDatabase.h  IDatabase.h  JustABunchOfFiles.cpp  JustABunchOfFiles.h  MouseTranslator.cpp  MouseTranslator.h  PrimitiveConfiguration.h  StorageDefinitions.h  StorageManager.cpp  StorageManager.h  StorageTypes.h  StorageUtils.cpp  StorageUtils.h
src/storage/api/: DatabaseJoystickAPI.cpp  DatabaseJoystickAPI.h
src/storage/frontend/: DatabaseFrontend.cpp
src/storage/gamecontrollerdb/: DatabaseGameControllerDB.cpp
src/storage/generic/: Database.cpp  Database.h  DeviceDatabase.cpp  DeviceDatabase.h
src/storage/schema/: ButtonMapRecord.cpp  ButtonMapRecord.h  DriverRecord.cpp  DriverRecord.h  DriverRecordTranslator.h
src/storage/web/: ButtonMapAPI.cpp  ButtonMapAPI.h  ButtonMapQuery.cpp  ButtonMapQuery.h  DatabaseWeb.cpp  DatabaseWeb.h  DeviceQuery.cpp  DeviceQuery.h  UserID.cpp  UserID.h
src/storage/xml/: ButtonMapDefinitions.h  ButtonMapRecordXml.cpp  ButtonMapRecordXml.h  ButtonMapXml.cpp  ButtonMapXml.h  DatabaseXml.cpp  DatabaseXml.h  DeviceDatabaseXml.cpp  DeviceDatabaseXml.h  DeviceXml.cpp  DeviceXml.h  DriverDatabaseXml.cpp  DriverDatabaseXml.h  DriverRecordXml.cpp  DriverRecordXml.h  JoystickFamiliesXml.cpp  JoystickFamiliesXml.h  JoystickFamilyDefinitions.h
src/utils/: CommonIncludes.h  CommonMacros.h  StringUtils.cpp  StringUtils.h
src/utils/windows/: CharsetConverter.cpp
xbmc/: xbmc_peripheral_types.h  xbmc_peripheral_utils.hpp
(+45 files in other folders)
